small fix to spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ section img {
 	max-width: 960px;
 	margin-top: 40px;
 	margin-left: 10%;
+	margin-bottom: 150px;
 }
 
 .subheading {
@@ -115,7 +116,7 @@ section img {
 	background-color: #ffffff;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	padding: 20px;
-	margin-bottom: 30px;
+	margin-bottom: 150px;
 	border: 3px solid #dddddd;
 }
 
